Attempt to fix scroll on ios

--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -59,6 +59,25 @@ a:hover, a:focus{
     display:block;
   }
 }
+.box .container {
+  width: 100%;
+  height: 100%;
+}
+.box.active {
+  overflow-x: hidden;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+  position: absolute;
+  left: 0;
+  top: 0;
+  margin: 0 auto;
+  z-index: 3;
+
+  .container {
+    position: relative;
+    -webkit-transform: translateZ(0);
+  }
+}
 .box.active .header{
   &:hover{
     background-color:#f9f9f9 !important;
